[package]
name = "rust-transaction-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = ["fs", "macros", "rt-multi-thread", "io-util"] }
csv-async = { version = "1.3.0", features = ["tokio"] }
csv = "1.3.1"
rust_decimal = { version = "1.37.1", features = ["serde"] }
serde = { version = "1.0.211", features = ["derive"] }
env_logger = "0.11.0"
log = "0.4.20"
futures = "0.3.31"
tokio-util = "0.7.15"
rustc-hash = "2.1.1"
dashmap = "6.1.0"
rust_decimal_macros = "1.37.1"